--- a/views/admin/orderDetails.ejs
+++ b/views/admin/orderDetails.ejs
@@ -71,7 +71,7 @@
                                     <h6 class="mb-1">Order info</h6>
                                     <p class="mb-1">
                                         Shipping: Fargo express <br />
-                                        Pay method: COD <br />
+                                        Pay method:<%= order.paymentMethod %> <br />
                                         Payment Status: <%= order.status %>
                                     </p>
                                     <!-- <a href="#">Download info</a> -->
