--- a/views/admin/orderList.ejs
+++ b/views/admin/orderList.ejs
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="card mb-4">
-        <header class="card-header">
+        <!-- <header class="card-header">
             <div class="row gx-3">
                 <div class="col-lg-4 col-md-6 me-auto">
                     <input type="text" placeholder="Search..." class="form-control" />
@@ -32,7 +32,7 @@
                     </select>
                 </div>
             </div>
-        </header>
+        </header> -->
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-hover">
@@ -74,8 +74,8 @@
                                         </a>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" href="/admin/orderList/orderDetails/<%= order._id %>">View detail</a>
-                                            <a class="dropdown-item" href="#">Edit info</a>
-                                            <a class="dropdown-item text-danger" href="#">Delete</a>
+                                            <!-- <a class="dropdown-item" href="#">Edit info</a>
+                                            <a class="dropdown-item text-danger" href="#">Delete</a> -->
                                         </div>
                                     </div>
                                 </td>
