--- a/views/adminLayouts/navbar.ejs
+++ b/views/adminLayouts/navbar.ejs
@@ -23,20 +23,10 @@
                     <div class="submenu">
                         <a href="/admin/product/listproduct">Products</a>
                         <a href="/admin/product/addproduct">Add Product</a>
-                        <a href="/admin/product/unlistproduct">Unlist Product</a>
                      
                     </div>
                 </li>
-                <li class="menu-item has-submenu" id="dashboardMenuItem">
-                    <a class="menu-link" href=""> <i class="icon material-icons md-shopping_cart"></i>
-                        <span class="text">Orders</span>
-                    </a>
-                    <div class="submenu">
-                        <a href="/admin/orderList">Order list</a>
-                        <!-- <a href="">Order detail</a> -->
-                        
-                    </div>
-                </li>
+               
                 <li class="menu-item has-submenu" id="dashboardMenuItem">
                     <a class="menu-link" href=""> <i class="icon material-icons md-category"></i>
                         <span class="text">Category</span>
@@ -44,16 +34,25 @@
                     <div class="submenu">
                         <a href="/admin/category/listcategories">Categories List</a>
                         <a href="/admin/category/addcategory">Add Category</a>
-                        <a href="/admin/category/unlistcategories">Unlist Category</a>
                     </div>
                 </li>
                 <li class="menu-item has-submenu" id="dashboardMenuItem">
-                    <a class="menu-link" href="page-form-product-1.html"> <i class="icon material-icons md-person"></i>
+                    <a class="menu-link" href="/admin/userlist"> <i class="icon material-icons md-person"></i>
                         <span class="text">Users</span>
                     </a>
                     <div class="submenu">
                         <a href="/admin/userlist">Users List</a>
                        
+                    </div>
+                </li>
+                <li class="menu-item has-submenu" id="dashboardMenuItem">
+                    <a class="menu-link" href="/admin/orderList"> <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Orders</span>
+                    </a>
+                    <div class="submenu">
+                        <a href="/admin/orderList">Order list</a>
+                        <!-- <a href="">Order detail</a> -->
+                        
                     </div>
                 </li>
                 <li class="menu-item has-submenu" id="dashboardMenuItem">
