--- a/views/user/wishList.ejs
+++ b/views/user/wishList.ejs
@@ -40,12 +40,15 @@
                                                         <tr>
                                                             <td class="image product-thumbnail">
                                                                 <a href="/productdetails/<%= items.productId._id %>">
-                                                                    <img src="/uploads/product/resized/<%= items.productId.productImage[0] %>" alt="#">
+                                                                    <img src="/uploads/product/resized/<%= items.productId.productImage[0] %>"
+                                                                        alt="#">
                                                                 </a>
                                                             </td>
                                                             <td class="product-des product-name">
                                                                 <a href="/productdetails/<%= items.productId._id %>">
-                                                                    <h5 class="product-name"><%= items.productId.name %></h5>
+                                                                    <h5 class="product-name">
+                                                                        <%= items.productId.name %>
+                                                                    </h5>
                                                                 </a>
                                                             </td>
                                                             <td class="price" data-title="Price"><span>₹<%=
@@ -67,11 +70,21 @@
 
                                                                         <td class="action" data-title="Remove">
                                                                             <a href="#"
-                                                                            onclick="removeFromCart('<%= items.productId._id %>')"
-                                                                             ><i class="fi-rs-trash"></i></a>
+                                                                                onclick="removeFromCart('<%= items.productId._id %>')"><i
+                                                                                    class="fi-rs-trash"></i></a>
                                                                         </td>
                                                         </tr>
                                                         <% }); %>
+                                                            <tr>
+
+                                                                <td colspan="6" class="text-end">
+                                                                    <a href="#" onclick="clearCartConfirmation()"
+                                                                        class="text-muted"> <i
+                                                                            class="fi-rs-cross-small"></i> Clear
+                                                                        Cart</a>
+                                                                </td>
+
+                                                            </tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -87,53 +100,118 @@
             <%- include('../layouts/preloader.ejs') %>
                 <%- include('../layouts/script.ejs') %>
 
-                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
                     <script>
-                              function removeFromCart(id) {
-                        Swal.fire({
-                            title: 'Are you sure?',
-                            text: "You won't be able to revert this!",
-                            icon: 'warning',
-                            showCancelButton: true,
-                            confirmButtonColor: '#3085d6',
-                            cancelButtonColor: '#d33',
-                            confirmButtonText: 'Yes, delete it!'
-                        }).then((result) => {
-                            if (result.isConfirmed) {
-                                fetch(`/wishList/removeFromWishList/${id}`, {
-                                    method: 'DELETE',
-                                })
-                                    .then(response => response.json())
-                                    .then(data => {
-                                        if (data.message === 'Cart item removed successfully') {
-                                            Swal.fire({
-                                                title: 'Deleted!',
-                                                text: 'Your item has been removed from the cart.',
-                                                icon: 'success',
-                                                timer: 3000,
-                                                timerProgressBar: true,
-                                                showConfirmButton: false,
-                                            });
-
-                                            location.reload();
-                                        } else {
+                        function removeFromCart(id) {
+                            Swal.fire({
+                                title: 'Are you sure?',
+                                text: "You won't be able to revert this!",
+                                icon: 'warning',
+                                showCancelButton: true,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                confirmButtonText: 'Yes, delete it!'
+                            }).then((result) => {
+                                if (result.isConfirmed) {
+                                    fetch(`/wishList/removeFromWishList/${id}`, {
+                                        method: 'DELETE',
+                                    })
+                                        .then(response => response.json())
+                                        .then(data => {
+                                            if (data.status) {
+                                                const Toast = Swal.mixin({
+                                                    toast: true,
+                                                    position: "top-end",
+                                                    showConfirmButton: false,
+                                                    timer: 3000,
+                                                    timerProgressBar: true,
+                                                    didOpen: (toast) => {
+                                                        toast.onmouseenter = Swal.stopTimer;
+                                                        toast.onmouseleave = Swal.resumeTimer;
+                                                    }
+                                                });
+                                                Toast.fire({
+                                                    title: 'Deleted!',
+                                                    text: 'Your item has been removed from the wishlist.',
+                                                    icon: 'success',
+                                                });
+                                              
+                                                setTimeout(() => {
+                                                    location.reload();
+                                                }, 3000);
+                                            } else {
+                                                Swal.fire(
+                                                    'Failed!',
+                                                    'Failed to remove item from wishlist.',
+                                                    'error'
+                                                );
+                                            }
+                                        })
+                                        .catch(error => {
+                                            console.error('Error:', error);
                                             Swal.fire(
                                                 'Failed!',
-                                                'Failed to remove item from cart.',
+                                                'Failed to remove item from wishlist.',
                                                 'error'
                                             );
-                                        }
+                                        });
+                                }
+                            });
+                        }
+
+
+
+
+                        function clearCartConfirmation() {
+                            Swal.fire({
+                                title: 'Are you sure?',
+                                text: "You won't be able to revert this!",
+                                icon: 'warning',
+                                showCancelButton: true,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                confirmButtonText: 'Yes, clear it!'
+                            }).then((result) => {
+                                if (result.isConfirmed) {
+                                    fetch('/wishList/clear', {
+                                        method: 'DELETE',
+                                        headers: {
+                                            'Content-Type': 'application/json',
+                                        },
                                     })
-                                    .catch(error => {
-                                        console.error('Error:', error);
-                                        Swal.fire(
-                                            'Failed!',
-                                            'Failed to remove item from cart.',
-                                            'error'
-                                        );
-                                    });
-                            }
-                        });
-                    }
- 
-                        </script>
+                                        .then(response => response.json())
+                                        .then(data => {
+                                            if (data.status) {
+                                                Swal.fire(
+                                                    {
+                                                        title: 'Cleared!',
+                                                        text: 'Your wishlist has been cleared.',
+                                                        icon: 'success',
+                                                        timer: 3000,
+                                                        timerProgressBar: true,
+                                                        showConfirmButton: false,
+                                                    }
+                                                );
+                                                setTimeout(() => {
+                                                    location.reload();
+                                                }, 3000);
+                                            } else {
+                                                Swal.fire(
+                                                    'Failed!',
+                                                    'Failed to clear the wishlist.',
+                                                    'error'
+                                                );
+                                            }
+                                        })
+                                        .catch(error => {
+                                            console.error('Error:', error);
+                                            Swal.fire(
+                                                'Failed!',
+                                                'Failed to clear the wishlist.',
+                                                'error'
+                                            );
+                                        });
+                                }
+                            });
+                        }
+                    </script>
